--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
