--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "2.1.8",
+    "recharts": "^2.8.0",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
